REL-2472: Conversion code for pre-2016A XMLs that have GPI Unblocked modes with cal=true. Added test database configuration for Arturo